--- a/MetroBot/package.json
+++ b/MetroBot/package.json
@@ -13,13 +13,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.20"
+    "node-uuid": "^1.4.8",
+    "nodemon": "^2.0.20",
+    "pdfkit": "^0.13.0",
+    "qrcode": "^1.5.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.29.0",
+    "eslint": "^8.30.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.6.0",
